--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,10 @@
-biopython==1.85
-Requests==2.32.4
-setuptools==80.9.0
+biopython>=1.85
+requests>=2.32
+beautifulsoup4>=4.12
+tqdm>=4.65
+numpy>=1.24
+pandas>=1.5
+scikit-learn>=1.3
+matplotlib>=3.6
+seaborn>=0.12
+scipy>=1.10
